# dta

./: README.md
optee_examples/dta_test/: Android.mk  CMakeLists.txt
optee_examples/dta_test/host/: Makefile  ditto.h  main.c  memory.h  setup.c
optee_examples/dta_test/ta/: Android.mk  Makefile  dta_test.c  func_extended.h  func_handlers.c  func_handlers.h  func_handlers_acipher.c  func_handlers_acipher.h  func_handlers_random.c  func_handlers_random.h  func_handlers_storage.c  func_handlers_storage.h  func_handlers_time.c  func_handlers_time.h  sub.mk  user_ta_header_defines.h
optee_examples/dta_test/ta/include/: ditto_ta.h  dta_test_ta.h
optee_examples/dta_test2/: Android.mk  CMakeLists.txt
optee_examples/dta_test2/host/: main.c  setup.h  syscall.h
optee_examples/dta_test2/ta/: Android.mk  Makefile  dta_test2.c  func_aes.c  func_aes.h  sub.mk  user_ta_header_defines.h
optee_examples/dta_test2/ta/include/: dta_test2_ta.h
optee_examples/test1/: Android.mk  CMakeLists.txt
optee_examples/test1/host/: Makefile  ditto.c  main.c  memory.c  syscall.c
optee_examples/test1/ta/: Android.mk  Makefile  ditto_ta.c  func_extended.c  sub.mk  test1_ta.c  user_ta_header_defines.h
optee_examples/test1/ta/include/: test1_ta.h
